
--You can now process photograph negatives into positives and view both
  photograph positives and negatives inside the game (before, you had to go
  out to the website to see photographs... now they can exist in the world to
  be treasured and discovered by future generations).  Fixes #888

--Fixed bug that was causing abstract pattern objects to appear in crafting
  hints.



Server Fixes

--Added missing fflush for name logging in lifeLog.  Fixes #880

--Deciding to spawn new Eves to create special biome families now correctly
  observes the 10-player buffer implemented in the fix for #878.  Fixes #887

--Life log now correctly records cause of death.  Fixes #891




Version 381    2023-July-21

--Moved tool tip and status message up slightly, and split warning about
  editing a Steam account onto two lines (to avoid overlapping with Tutorial
  and Services buttons).  Fixes #870

--Fixed typo in name of setStatusPosition.

--Category editor now allows copying a category list to clipboard as CSV
  (for examining pattern-based transitions in a spreadsheet).

--When a useable object has vanishing sprites (as object gets used up), we now
  make sure full object and one-less-than-full object have a different number
  of vanishing sprites (so object changes visually when it goes from full to
  one less than full).  Fixes jasonrohrer/OneLifeData7#869

--Can now toggle vsync from Settings screen.  Part of #875

--Can now manually type in a custom frame rate on Settings screen when vsync
  is disabled.  Fixes #875

--New /ORDER command that allows you to review the most recent oder received
  from your leader, in case you missed it or what to re-read it.  Fixes #881



Server Fixes

--New maxRadioDistance setting, set to 100,000 tiles.  Fixes #871

--Donkeytown players are never sent CU status messages (CURSES), so they can't
  identfy each other using globally-assigned curse status words.  Fixes #873
